ecmascript/parser/tests/typescript-errors/tsc/scanner/ecmascript5/scannerNumericLiteral4/input.ts.stderr
error: Expected +, - or decimal digit after e
 --> $DIR/tests/typescript-errors/tsc/scanner/ecmascript5/scannerNumericLiteral4/input.ts:2:3
  |
2 | 1e
  |   ^

